@@ -37,6 +37,32 @@ open class IOCliTask : org.jetbrains.intellij.tasks.RunIdeTask() {
     }
 }
 
+open class PreprocessKotlinJavaCliTask : org.jetbrains.intellij.tasks.RunIdeTask() {
+    // Input directory with files
+    @get:Input
+    val input: String? by project
+
+    // Output directory to store indexes and methods data
+    @get:Input
+    val output: String? by project
+
+    // Absolute path to Android SDK
+    @get:Input
+    val androidSdk: String? by project
+
+    init {
+        jvmArgs = listOf(
+            "-Djava.awt.headless=true",
+            "--add-exports",
+            "java.base/jdk.internal.vm=ALL-UNNAMED",
+            "-Djdk.module.illegalAccess.silent=true"
+        )
+        maxHeapSize = "20g"
+        standardInput = System.`in`
+        standardOutput = System.`out`
+    }
+}
+
 open class IOCliAndroidTask : org.jetbrains.intellij.tasks.RunIdeTask() {
     // Name of the runner
     @get:Input
@@ -72,6 +98,16 @@ tasks {
             runner,
             input?.let { "--input=$it" },
             output?.let { "--output=$it" }
+        )
+    }
+
+    register<PreprocessKotlinJavaCliTask>("preprocessKotlinJava") {
+        dependsOn("buildPlugin")
+        args = listOfNotNull(
+            "preprocessKotlinJava",
+            input?.let { "--input=$it" },
+            output?.let { "--output=$it" },
+            androidSdk?.let { "--androidSdk=$it" }
         )
     }
 
